name:                wingfield
version:             0.1.0.0
synopsis:            An experimental optics library
description:         Wingfield is an attempt to redesign Kmett's lens library in
                     more "normal Haskell," sacrificing performance and
                     generality for the sake of accessibility.
homepage:            https://github.com/chris-martin/wingfield
license:             Apache-2.0
license-file:        license.txt
author:              Chris Martin
maintainer:          ch.martin@gmail.com
copyright:           2017 Chris Martin
category:            Lenses
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wingfield.Type
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , wingfield
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             doctest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , wingfield
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chris-martin/wingfield
